--- a/index.html
+++ b/index.html
@@ -88,5 +88,5 @@
       </div>
     </footer>
   </body>
-  <script type="module" src="script.js" defer></script>
+  <script type="module" src="/script.js" defer></script>
 </html>
