--- a/screens/admin.html
+++ b/screens/admin.html
@@ -84,5 +84,8 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
-  <script type="module" src="/controllers/admin.js"></script>
+  <script
+    type="module"
+    src="/Challenge4-ORACLE-ONE/controllers/admin.js"
+  ></script>
 </html>
