--- a/screens/login-products.html
+++ b/screens/login-products.html
@@ -46,5 +46,8 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
-  <script type="module" src="/controllers/login-products.js"></script>
+  <script
+    type="module"
+    src="/Challenge4-ORACLE-ONE/controllers/login-products.js"
+  ></script>
 </html>
