--- a/screens/login.html
+++ b/screens/login.html
@@ -68,5 +68,8 @@
       </div>
     </footer>
   </body>
-  <script defer src="/controllers/login-controller.js"></script>
+  <script
+    defer
+    src="/Challenge4-ORACLE-ONE/controllers/login-controller.js"
+  ></script>
 </html>
