--- a/screens/product.html
+++ b/screens/product.html
@@ -73,7 +73,10 @@
           </div>
         </footer>
       </body>
-      <script type="module" src="/controllers/product.js"></script>
+      <script
+        type="module"
+        src="/Challenge4-ORACLE-ONE/controllers/product.js"
+      ></script>
     </html>
   </body>
 </html>
