--- a/screens/sillas.html
+++ b/screens/sillas.html
@@ -64,5 +64,8 @@
       </div>
     </footer>
   </body>
-  <script type="module" src="/controllers/section-sillas.js"></script>
+  <script
+    type="module"
+    src="/Challenge4-ORACLE-ONE/controllers/section-sillas.js"
+  ></script>
 </html>
