admin options test

--- a/screens/admin-edit.html
+++ b/screens/admin-edit.html
@@ -48,7 +48,9 @@
       </div>
       <div class="input-container categoria">
         <select name="categoria" id="categoria" class="categoria" data-select>
-          <option value="consolas" placeholder="Consolas">Consolas</option>
+          <option value="consolas" placeholder="Consolas" selected>
+            Consolas
+          </option>
           <option value="sillas">Sillas</option>
         </select>
         <label class="input-label">Categoría</label>
