loading indicator, media queries

--- a/index.html
+++ b/index.html
@@ -54,14 +54,28 @@
           </a>
         </div>
       </div>
-      <div class="items_container" id="consolas"></div>
+      <div class="items_container" id="consolas">
+        <div class="lds-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
       <div class="section">
         <p>Sillas</p>
         <a href="/Challenge4-ORACLE-ONE/screens/sillas.html">
           <button class="btn_item">Ver Todo &#10142;</button>
         </a>
       </div>
-      <div class="items_container" id="sillas"></div>
+      <div class="items_container" id="sillas">
+        <div class="lds-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer_1">
